# cpp-props-nonintrusive

./: .gitignore  CMakeLists.txt  README  README.md  TODO  cpp-props.sln  cpp-props.vcxproj  cpp-props.vcxproj.filters  main.cpp  props.h
include/metaprops/: props.h
libs/: CMaleLists.txt
src/: main.cpp
test/: CMakeLIsts.txt  tests.cpp
